// get-employee-service/proto/employee/employee.proto
syntax = "proto3";

package employee;

service EmployeeService {
  rpc CreateEmployee(User) returns (CreateUserResponse) {}

  // Created a new method
  rpc GetEmployees(GetUsersRequest) returns (GetUsersResponse) {}
}

message User {
  string id = 1;
  string name = 2;
  int32 phone = 3;
  repeated Address addresses = 4;
  string email_id = 5;
}

message Address {
  string id = 1;
  string address_line = 2;
  string landmark = 3;
  string pincode = 4;
}

message CreateUserResponse {
  bool created = 1;
  User user = 2;

}

// Created a blank get request
message GetUsersRequest {}

message GetUsersResponse {
  bool created = 1;
  User user = 2;
  // Added a pluralised consignment to our generic response message
  repeated User users = 3;
}